2003-10-12  Kaz Sasayama  <kazssym@yaromai.net>

	* configure.ac: Set PACKAGE_VERSION to 1.5.0.

	* profile.cpp (class xmlNode_iterator): Avoid
	bidirectional_iterator.

	* NEWS: Updated for the next release.

	* Makefile.am (EXTRA_DIST): Remove VERSION-ID.
	* Makefile.in: Regenerated.
	* VERSION-ID: Removed.

	* configure.ac: Cleaned up for autoconf 2.57.  Add check for -lm.
	* aclocal.m4: Regenerated.
	* configure: Regenerated.
	* config.h.in: Regenerated.

2003-08-09  Kaz Sasayama  <kazssym@yaromai.net>

	* Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.
	(rglclock_SOURCES): Update file names.
	(update-po): Removed.
	(dist-snapshot): Removed.

	* rglclock.cpp: Renamed from main.cc.
	* profile.cpp: Renamed from profile.cc.

	* about.cc (_GNU_SOURCE): Defined.

	* configure.ac: Renamed and updated for Autoconf 2.50+.
	* aclocal.m4: Regenerated.
	* configure: Regenrated.
	* config.h.in: Regenerated.
	* Makefile.in: Regenerated.
	* acconfig.h: Removed.
	* depcomp: Added.

2002-04-23  Kaz Sasayama  <Kaz.Sasayama@HyperLinuxJP.com>

	* Version 1.3.6.

	* configure.in: Set VERSION to 1.3.6.

	* README: Updated.

	* NEWS: Updated.

	* profile.cc (class xmlNode_iterator): Add operator!=.

	* profile.h: Remove declaration of struct xmlDoc.

2000-03-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Updated.

	* simple.c (simple_init): Set ambient parameters.

1999-10-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Updated.

	* THANKS: Updated.

	* configure.in: Set VERSION to 1.3.5.

	* rglclock.1: Update documentation.

	* README: Update documentation.

	* profile.cc (save, restore): Add const to each CHAR in
	reinterpret_cast.

1999-07-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* profile.cc (save): Use xmlNewDocNode.

1999-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* configure.in: Change the version number to 1.3.4.

	* NEWS: Modified.

	* rglclock.1: Modified.

1999-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
